<resources>
    <string name="app_name">Amuse Bouche</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_reload">Reload</string>
    <string name="action_rate">Rate</string>
    <string name="action_delete">Delete</string>
    <string name="action_download">Download</string>
    <string name="action_upload">Upload</string>
    <string name="action_edit">Edit</string>
    <string name="action_save">Save</string>
    <string name="language_es">Spanish</string>
    <string name="language_en">English</string>
    <string name="category_allergy_gluten">Gluten allergy</string>
    <string name="category_allergy_lactose">Lactose allergy</string>
    <string name="category_allergy_shellfish">Shellfish allergy</string>
    <string name="category_allergy_fish">Fish allergy</string>
    <string name="category_allergy_dried_fruit">Dried fruit allergy</string>
    <string name="category_uncategorized">Uncategorized</string>
    <string name="category_mediterranean">Mediterranean</string>
    <string name="category_vegetarian">Vegetarian</string>
    <string name="category_vegan">Vegan</string>
    <string name="type_of_dish_appetizer">Appetizer</string>
    <string name="type_of_dish_first_course">First course</string>
    <string name="type_of_dish_second_course">Second course</string>
    <string name="type_of_dish_main_dish">Main dish</string>
    <string name="type_of_dish_dessert">Dessert</string>
    <string name="type_of_dish_other">Other</string>
    <string name="difficulty_high">High difficulty</string>
    <string name="difficulty_medium">Medium difficulty</string>
    <string name="difficulty_low">Low difficulty</string>
    <string name="measurement_unit_of">of</string>
    <string name="measurement_unit_unit">unit</string>
    <string name="measurement_unit_unit_plural">units</string>
    <string name="measurement_unit_g">gram</string>
    <string name="measurement_unit_kg">kilogram</string>
    <string name="measurement_unit_ml">mililiter</string>
    <string name="measurement_unit_l">liter</string>
    <string name="measurement_unit_cup">cup</string>
    <string name="measurement_unit_tsp">teaspoon</string>
    <string name="measurement_unit_tbsp">tablespoon</string>
    <string name="measurement_unit_rasher">rasher</string>
    <string name="measurement_unit_g_plural">grams</string>
    <string name="measurement_unit_kg_plural">kilograms</string>
    <string name="measurement_unit_ml_plural">mililiters</string>
    <string name="measurement_unit_l_plural">liters</string>
    <string name="measurement_unit_cup_plural">cups</string>
    <string name="measurement_unit_tsp_plural">teaspoons</string>
    <string name="measurement_unit_tbsp_plural">tablespoons</string>
    <string name="measurement_unit_rasher_plural">rashers</string>
    <string name="splash_screen_loading_ingredients_message">Loading ingredients…</string>
    <string name="splash_screen_login_message">Login…</string>
    <string name="transition_recipe_detail">detail</string>
    <string name="transition_detail_image">SharedImage</string>
    <string name="lateral_menu_login">Login</string>
    <string name="lateral_menu_new_recipes">Last recipes</string>
    <string name="lateral_menu_downloaded_recipes">Downloaded recipes</string>
    <string name="lateral_menu_my_recipes">My recipes</string>
    <string name="lateral_menu_settings">Settings</string>
    <string name="lateral_menu_info">Information</string>
    <string name="search_view_accept">Search</string>
    <string name="search_view_title_filter_hint">Matching text with the title</string>
    <string name="search_view_collapse_fold_image">collapse_fold_image</string>
    <string name="search_view_collapsible_view">collapsible_view</string>
    <string name="search_view_allowed_ingredients">Allowed ingredients</string>
    <string name="search_view_forbidden_ingredients">Forbidden ingredients</string>
    <string name="search_view_allergens">Allergies and intolerances</string>
    <string name="search_view_diets">Diets</string>
    <string name="search_view_difficulties">Difficulty</string>
    <string name="search_view_types_of_dish">Type of dish</string>
    <string name="search_view_ordering">Ordering</string>
    <string name="search_dislike_category_allergy_gluten">Suitable for coeliacs</string>
    <string name="search_dislike_category_allergy_lactose">Suitable for lactose intolerant</string>
    <string name="search_dislike_category_allergy_shellfish">Suitable for allergic to shellfish</string>
    <string name="search_dislike_category_allergy_fish">Suitable for allergic to fish</string>
    <string name="search_dislike_category_allergy_dried_fruit">Suitable for allergic to dried fruits</string>
    <string name="search_category_diet_mediterranean">Mediterranean</string>
    <string name="search_category_diet_vegetarian">Vegetarian</string>
    <string name="search_category_diet_vegan">Vegan</string>
    <string name="search_difficulty_none">All</string>
    <string name="search_difficulty_low">Low</string>
    <string name="search_difficulty_medium">Medium</string>
    <string name="search_difficulty_high">High</string>
    <string name="search_type_of_dish_none">All</string>
    <string name="search_type_of_dish_appetizer">Appetizer</string>
    <string name="search_type_of_dish_first_course">First course</string>
    <string name="search_type_of_dish_second_course">Second course</string>
    <string name="search_type_of_dish_main_dish">Main dish</string>
    <string name="search_type_of_dish_dessert">Dessert</string>
    <string name="search_type_of_dish_other">Other</string>
    <string name="search_ordering_last_updated">Last updated</string>
    <string name="search_ordering_best_rated">Best rated</string>
    <string name="search_ordering_alphabetical">Alphabetically</string>
    <string name="exit_message">Are you sure you want to exit?</string>
    <string name="YES">Yes</string>
    <string name="NO">No</string>
    <string name="please_wait_message">Please, wait…</string>
    <string name="recipe_list_loading_recipes_message">Loading recipes…</string>
    <string name="recipe_list_offline_mode_disabled_message">Disabled in offline mode</string>
    <string name="recipe_list_offline_mode_message">Offline mode: recipes download disabled</string>
    <string name="recipe_list_wifi_mode_message">Recipes download is only available for WiFi</string>
    <string name="recipe_list_no_recipes_message">No recipes found</string>
    <string name="recipe_list_no_connection_message">No connection found</string>
    <string name="detail_recipe_created_message">Recipe created</string>
    <string name="detail_recipe_updated_message">Recipe updated</string>
    <string name="detail_recipe_rated_message">Rating uploaded</string>
    <string name="detail_recipe_wifi_only_message">Only available for WiFi connections</string>
    <string name="detail_saving_recipe_message">Saving recipe…</string>
    <string name="detail_uploading_recipe_message">Uploading recipe…</string>
    <string name="detail_rating_recipe_message">Rating recipe…</string>
    <string name="detail_saving_error_message">Saving the recipe failed</string>
    <string name="detail_uploading_error_message">Uploading the recipe failed</string>
    <string name="detail_rating_error_message">Rating the recipe failed</string>
    <string name="image">Image</string>
    <string name="detail_users">users</string>
    <string name="detail_user">user</string>
    <string name="detail_user_you">You</string>
    <string name="detail_information_label">Information</string>
    <string name="detail_ingredients_label">Ingredients</string>
    <string name="detail_directions_label">Directions</string>
    <string name="detail_comments_label">Comments</string>
    <string name="detail_direction_label_with_number">DIRECTION %1$d</string>
    <string name="detail_direction_label">DIRECTION</string>
    <string name="detail_type_of_dish_label">Type of dish</string>
    <string name="detail_difficulty_label">Difficulty</string>
    <string name="detail_cooking_time_label">Cooking time</string>
    <string name="detail_servings_label">Servings</string>
    <string name="detail_source_label">Source</string>
    <string name="detail_categories_label">Categories</string>
    <string name="detail_hour">hour</string>
    <string name="detail_minute">minute</string>
    <string name="detail_hours">hours</string>
    <string name="detail_minutes">minutes</string>
    <string name="detail_seconds">\'\'</string>
    <string name="detail_timer_colon">:</string>
    <string name="detail_timer_label">Timer</string>
    <string name="detail_timer_cancel_button">Cancel</string>
    <string name="detail_timer_start_button">Start</string>
    <string name="detail_timer_edit_button">Edit</string>
    <string name="detail_timer_skip_button">Skip</string>
    <string name="detail_timer_continue_button">Continue</string>
    <string name="detail_timer_hours_initial">h</string>
    <string name="detail_timer_minutes_initial">m</string>
    <string name="detail_timer_seconds_initial">s</string>
    <string name="detail_timer_notification_time_message">Time left: %1$s:%2$s</string>
    <string name="detail_timer_notification_finished">Direction finished. Tap here to continue with the recipe.</string>
    <string name="detail_button_start_speaking">Start speaking</string>
    <string name="detail_commands_listening_message">Listening…</string>
    <string name="detail_commands_error_message">Error</string>
    <string name="detail_commands_success_message">Success</string>
    <string name="detail_direction_speak_end_of_recipe_message">The recipe is finish. Let\'s eat!</string>
    <string name="detail_direction_speak_start_timer_message">Starting timer.</string>
    <string name="voice_command_repeat">repeat</string>
    <string name="voice_command_timer">timer</string>
    <string name="voice_command_next">next</string>
    <string name="voice_command_exit">exit</string>
    <string name="voice_or">or</string>
    <string name="voice_error_audio">Audio recording error</string>
    <string name="voice_error_client">Client side error</string>
    <string name="voice_error_insufficient_permissions">Insufficient permissions</string>
    <string name="voice_error_network">Network error</string>
    <string name="voice_error_network_timeout">Network timeout</string>
    <string name="voice_error_no_match">No match</string>
    <string name="voice_error_recognizer_busy">Recognition service is busy</string>
    <string name="voice_error_server">Error from server</string>
    <string name="voice_error_speech_timeout">No speech input.</string>
    <string name="detail_rate_recipe_title">Rate recipe</string>
    <string name="recipe_edition_title_label">Title</string>
    <string name="recipe_edition_title_hint">Recipe\'s name</string>
    <string name="recipe_edition_source_hint">Source</string>
    <string name="recipe_edition_main_image_label">Image URL</string>
    <string name="recipe_edition_ingredient_name_hint">Ingredient</string>
    <string name="recipe_edition_ingredient_quantity_hint">Quantity</string>
    <string name="recipe_edition_direction_description_hint">Direction</string>
    <string name="recipe_edition_direction_image_hint">Image URL</string>
    <string name="recipe_edition_direction_video_hint">Video URL</string>
    <string name="info_app_name">Amuse Bouche</string>
    <string name="info_app_subtitle">©2016 Noelia Sales Montes</string>
    <string name="info_app_software_libre">This app is libre software</string>
    <string name="info_license">GPLv3 License</string>
    <string name="info_third_party_licenses">Third-party licenses</string>
    <string name="info_donate">Donate via Paypal</string>
</resources>