<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DetailActivity">
    <item
        android:id="@+id/action_edit"
        android:title="@string/action_edit"
        android:icon="@drawable/ic_mode_edit_white_48px"
        android:orderInCategory="102"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_download"
        android:title="@string/action_download"
        android:icon="@drawable/ic_download_white_48dp"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_upload"
        android:title="@string/action_upload"
        android:icon="@drawable/ic_file_upload_white_48px"
        android:orderInCategory="101"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_rate"
        android:title="@string/action_rate"
        android:icon="@drawable/ic_star_white_48dp"
        android:orderInCategory="103"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete"
        android:title="@string/action_delete"
        android:icon="@drawable/ic_delete_white_48dp"
        android:orderInCategory="104"
        app:showAsAction="ifRoom" />
</menu>
