<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="@dimen/edition_dialog_width"
    android:layout_height="match_parent">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edition_dialog_image_height">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/edition_dialog_image_height"
            android:src="@drawable/directions"
            android:scaleType="centerCrop"
            android:contentDescription="@string/detail_ingredients_label" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/edition_dialog_image_height"
            android:background="@drawable/bottom_gradient"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/edition_dialog_title_margin_left"
            android:layout_marginBottom="@dimen/edition_dialog_title_margin_bottom"
            android:textSize="@dimen/edition_dialog_title_size"
            android:textColor="@android:color/white" />

    </RelativeLayout>

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="4"
        android:hint="@string/recipe_edition_direction_description_hint" />

    <EditText
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textUri"
        android:maxLines="1"
        android:hint="@string/recipe_edition_direction_image_hint" />

    <EditText
        android:id="@+id/video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:hint="@string/recipe_edition_direction_video_hint" />

    <TextView
        android:id="@+id/cooking_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="@dimen/edition_basic_padding"
        android:textColor="@color/primary_text"
        android:fontFamily="sans-serif"
        android:textSize="@dimen/edition_dialog_hours_text_size"
        android:textStyle="normal" />
    <SeekBar
        android:id="@+id/cooking_time_hours"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="20"
        android:progress="0"/>
    <SeekBar
        android:id="@+id/cooking_time_minutes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="59"
        android:progress="0"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end" >

        <Button
            android:id="@+id/cancel"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/theme_default_accent"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dialog_button_padding"
            android:paddingStart="@dimen/dialog_button_padding"
            android:paddingEnd="@dimen/dialog_button_padding"
            android:enabled="true" />
        <Button
            android:id="@+id/accept"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept"
            android:textColor="@color/theme_default_accent"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dialog_button_padding"
            android:paddingStart="@dimen/dialog_button_padding"
            android:paddingEnd="@dimen/dialog_button_padding"
            android:enabled="true" />

    </LinearLayout>
</LinearLayout>