<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white" >

    <com.github.ksoichiro.android.observablescrollview.ObservableScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/edition_basic_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edition_basic_margin_top"
                android:textColor="@color/secondary_text"
                android:fontFamily="sans-serif"
                android:textSize="@dimen/edition_label_text_size"
                android:textStyle="bold"
                android:text="@string/recipe_edition_title_label" />
            <EditText android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/recipe_edition_title_hint"
                android:backgroundTint="@color/theme_default_primary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edition_basic_margin_top"
                android:textColor="@color/secondary_text"
                android:fontFamily="sans-serif"
                android:textSize="@dimen/edition_label_text_size"
                android:textStyle="bold"
                android:text="@string/recipe_edition_main_image_label" />
            <EditText android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/recipe_edition_main_image_label"
                android:backgroundTint="@color/theme_default_primary" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edition_basic_margin_top"
                android:textColor="@color/secondary_text"
                android:fontFamily="sans-serif"
                android:textSize="@dimen/edition_label_text_size"
                android:textStyle="bold"
                android:text="@string/detail_type_of_dish_label" />
            <Spinner
                android:id="@+id/type_of_dish"
                android:layout_width="fill_parent"
                android:layout_height="24dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edition_basic_margin_top"
                android:textColor="@color/secondary_text"
                android:fontFamily="sans-serif"
                android:textSize="@dimen/edition_label_text_size"
                android:textStyle="bold"
                android:text="@string/detail_difficulty_label" />
            <Spinner
                android:id="@+id/difficulty"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edition_basic_margin_top"
                android:textColor="@color/secondary_text"
                android:fontFamily="sans-serif"
                android:textSize="@dimen/edition_label_text_size"
                android:textStyle="bold"
                android:text="@string/detail_cooking_time_label" />
            <TextView
                android:id="@+id/cooking_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingTop="@dimen/edition_basic_padding"
                android:textColor="@color/primary_text"
                android:fontFamily="sans-serif"
                android:textSize="@dimen/edition_hours_text_size"
                android:textStyle="normal" />
            <SeekBar
                android:id="@+id/cooking_time_hours"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:max="20"
                android:progress="0"/>
            <SeekBar
                android:id="@+id/cooking_time_minutes"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:max="59"
                android:progress="0"/>


            <TextView
                android:id="@+id/servings_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edition_basic_margin_top"
                android:textColor="@color/secondary_text"
                android:fontFamily="sans-serif"
                android:textSize="@dimen/edition_label_text_size"
                android:textStyle="bold" />
            <SeekBar
                android:id="@+id/servings"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:max="19"
                android:progress="0"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edition_basic_margin_top"
                android:textColor="@color/secondary_text"
                android:fontFamily="sans-serif"
                android:textSize="@dimen/edition_label_text_size"
                android:textStyle="bold"
                android:text="@string/detail_source_label" />
            <EditText android:id="@+id/source"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/recipe_edition_source_hint"
                android:backgroundTint="@color/theme_default_primary" />

        </LinearLayout>
    </com.github.ksoichiro.android.observablescrollview.ObservableScrollView>

</LinearLayout>